# Modern-Digger

./: README.md
Digger_Game/: CMakeLists.txt
Digger_Game/include/: BoardManager.h  Controller.h  Data.h  Diamond.h  Digger.h  EdibleObject.h  Gift.h  LivesGift.h  Menu.h  Monster.h  MovableObject.h  Object.h  Resources.h  ScoreGift.h  SmartMonster.h  Statistic.h  Stone.h  StoneGift.h  StupidMonster.h  TimeGift.h  Wall.h  WindowManager.h  constants.h  utilities.h
Digger_Game/resources/: Board.txt  CMakeLists.txt  board2.txt  stats.txt
Digger_Game/src/: CMakeLists.txt  Controller.cpp  Data.cpp  Diamond.cpp  Digger.cpp  EdibleObject.cpp  Gift.cpp  LivesGift.cpp  Menu.cpp  Monster.cpp  MovableObject.cpp  Object.cpp  Resources.cpp  ScoreGift.cpp  SmartMonster.cpp  Statistic.cpp  Stone.cpp  StoneGift.cpp  StupidMonster.cpp  TimeGift.cpp  (+2 more)
Project_Digger/: CMakeLists.txt
Project_Digger/include/: BoardManager.h  CMakeLists.txt  Controller.h  Data.h  Diamond.h  Digger.h  Edible_Object.h  Gift.h  Monster.h  Movable_Object.h  Object.h  Resources.h  Score_Gift.h  Smart_Monster.h  Stone.h  Stone_Gift.h  Stupid_Monster.h  Time_Gift.h  Wall.h  WindowManager.h  constants.h  utilities.h
Project_Digger/resources/: Board.txt  CMakeLists.txt
Project_Digger/src/: BoardManager.cpp  CMakeLists.txt  Controller.cpp  Data.cpp  Diamond.cpp  Digger.cpp  Edible_Object.cpp  Gift.cpp  Monster.cpp  Movable_Object.cpp  Object.cpp  Resources.cpp  Score_Gift.cpp  Smart_Monster.cpp  Stone.cpp  Stone_Gift.cpp  Stupid_Monster.cpp  Time_Gift.cpp  Wall.cpp  WindowManager.cpp  main.cpp  utilities.cpp
